--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Multiservicios Jchuj</title>
 <meta name="description" content="Estructuras metálicas, plomería, instalaciones eléctricas, obra gris, mantenimiento general y armado estructural para edificios. 20 años de experiencia.">
+<meta name="theme-color" content="#0f2a5a">
 <link rel="icon" href="./assets/img/logo.jpeg">
 
 <style>
@@ -104,7 +105,10 @@
   .kpi .card{ background:#fff; border:1px solid #e5eef9; padding:16px; border-radius:var(--radius); text-align:center; }
   .kpi .card b{ font-size:1.8rem; color:var(--blue-700); }
 
-  @media (max-width:860px){ .about-grid{ grid-template-columns:1fr; } .kpi{ grid-template-columns:repeat(3, minmax(0,1fr)); } }
+  @media (max-width:860px){
+    .about-grid{ grid-template-columns:1fr; }
+    .kpi{ grid-template-columns:repeat(3, minmax(0,1fr)); }
+  }
 
   /* Servicios */
   .services{ max-width:1100px; margin:0 auto; display:grid; grid-template-columns:repeat(auto-fit, minmax(240px,1fr)); gap:18px; }
@@ -115,7 +119,7 @@
   /* Galería */
   .grid{ display:grid; grid-template-columns:repeat(auto-fit, minmax(240px,1fr)); gap:18px; max-width:1100px; margin:0 auto; }
   .card{ border:1px solid #e5eef9; border-radius:var(--radius); overflow:hidden; background:#fff; }
-  .card img{ width:100%; height:220px; object-fit:cover; display:block; }
+  .card img{ width:100%; height:220px; object-fit:cover; display:block; } /* altura fija en desktop */
   .card .p{ padding:12px 14px; color:var(--muted); font-size:.95rem; }
 
   /* Contacto y footer */
@@ -123,6 +127,48 @@
   .contact-cta{ text-align:center; margin-top:20px; }
   footer{ margin-top:0; padding:36px 20px; background:var(--blue-900); color:#dbe6ff; text-align:center; }
   footer a{ color:#fff; text-decoration:underline; }
+
+  /* === Ajustes móviles/Tablet (overrides) === */
+  html { -webkit-text-size-adjust: 100%; }
+  body { overflow-x: hidden; }
+
+  .hero h1 { font-size: clamp(1.6rem, 5.2vw, 2.6rem); }
+  .hero p  { font-size: clamp(0.95rem, 3.6vw, 1.1rem); }
+
+  /* Evita distorsión en galería en móviles: relación 16:9 */
+  @media (max-width: 720px){
+    .card img {
+      height: auto !important;
+      aspect-ratio: 16 / 9;
+      object-fit: cover;
+      display: block;
+    }
+  }
+
+  section { padding: clamp(48px, 7vw, 70px) 20px; }
+
+  @media (max-width: 880px){
+    .menu{
+      left: 20px;
+      right: 20px;
+      width: auto;
+      max-width: calc(100% - 40px);
+    }
+  }
+
+  @media (max-width: 720px){
+    header.hero { min-height: 64vh; }
+    .arrow { padding: 8px 10px; }
+    .arrow.prev { left: 8px; } 
+    .arrow.next { right: 8px; }
+    .carousel-controls { gap: 6px; }
+    .dot { width: 8px; height: 8px; }
+  }
+
+  @media (max-width: 640px){
+    .services { gap: 14px; }
+    .grid { gap: 14px; }
+  }
 
   @media (prefers-reduced-motion: reduce){
     .hero-bg img{ transition:none !important; }
@@ -241,7 +287,6 @@
   <div class="container">
     <h2 class="section-title">Galería de Trabajos</h2>
     <div class="grid">
-      <!-- Puedes duplicar o eliminar tarjetas; son ejemplos con tus nombres de archivo -->
       <article class="card">
         <img src="./assets/img/trabajo1.jpeg" alt="Trabajo 1">
         <div class="p">Trabajo 1</div>
@@ -373,3 +418,4 @@
 </script>
 </body>
 </html>
+
