--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Multiservicios Jchuj</title>
 <meta name="description" content="Estructuras metálicas, plomería, instalaciones eléctricas, obra gris, mantenimiento general y armado estructural. 20 años de experiencia.">
 <meta name="theme-color" content="#0f2a5a">
-<!-- Favicons (usa la que exista) -->
 <link rel="icon" type="image/png"  href="./assets/img/logo/logo.png">
 <link rel="icon" type="image/jpeg" href="./assets/img/logo/logo.jpg">
 <link rel="icon" type="image/jpeg" href="./assets/img/logo/logo.jpeg">
@@ -21,16 +20,15 @@
   /* Resets + guardas contra overflow */
   *{box-sizing:border-box;margin:0;padding:0}
   *::before,*::after{box-sizing:border-box}
-  html{scroll-behavior:smooth;-webkit-text-size-adjust:100%;}
-  html,body{overflow-x:hidden;}
-  @supports (overflow: clip){ html,body{overflow-x:clip;} }
+  html{scroll-behavior:smooth;-webkit-text-size-adjust:100%}
+  html,body{overflow-x:hidden}
+  @supports (overflow: clip){ html,body{overflow-x:clip} }
   img,svg,video,canvas{max-width:100%;height:auto;display:block}
 
   body{font-family:system-ui,-apple-system,Roboto,Arial,sans-serif;color:var(--ink);background:#fff;line-height:1.6}
   .container{max-width:1200px;width:100%;margin:0 auto;padding-inline:20px}
 
-  a{color:var(--blue-700);text-decoration:none}
-  a:hover{text-decoration:underline}
+  a{color:var(--blue-700);text-decoration:none} a:hover{text-decoration:underline}
   .btn{display:inline-block;padding:12px 20px;border-radius:12px;font-weight:600;border:2px solid var(--orange-500);color:#fff;background:var(--orange-500)}
   .btn--ghost{color:var(--orange-500);background:transparent}
   .tag{display:inline-block;font-size:.8rem;padding:6px 10px;border-radius:999px;background:var(--blue-100);color:var(--blue-700)}
@@ -77,14 +75,32 @@
 
   /* QUIÉNES SOMOS */
   .about{background:#f8fafc}
-  .about .container{overflow-x:hidden} /* cierra cualquier desborde del grid en móvil */
-  .about-grid{display:grid;grid-template-columns:1fr 1fr;gap:32px;max-width:1000px;margin:0 auto}
-  /* evita que el min-content empuje el viewport en móvil */
-  .about-grid{grid-template-columns:repeat(2,minmax(0,1fr))}
+  .about .container{overflow-x:hidden}
+  .about-grid{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:32px;max-width:1000px;margin:0 auto}
   .about p{color:var(--muted);overflow-wrap:anywhere;word-break:break-word}
-  .kpi{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;margin-top:16px}
-  .kpi .card{background:#fff;border:1px solid #e5eef9;padding:16px;border-radius:var(--radius);text-align:center}
+
+  /* KPIs: SIN SOLAPES */
+  .kpi{
+    display:grid;
+    grid-template-columns:repeat(3,minmax(0,1fr));
+    gap:12px;
+    margin-top:16px;
+    align-items:stretch; /* cada tarjeta ocupa su celda completa */
+  }
+  .kpi .card{
+    background:#fff;border:1px solid #e5eef9;padding:16px;border-radius:var(--radius);
+    text-align:center;display:flex;flex-direction:column;justify-content:center;height:100%;
+    word-break:break-word;
+  }
   .kpi .card b{font-size:1.8rem;color:var(--blue-700)}
+
+  /* Breakpoints para evitar traslape en móvil */
+  @media (max-width:680px){
+    .kpi{ grid-template-columns:repeat(2,minmax(0,1fr)); }
+  }
+  @media (max-width:420px){
+    .kpi{ grid-template-columns:1fr; }
+  }
 
   /* SERVICIOS */
   .services{max-width:1100px;margin:0 auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:18px}
@@ -116,13 +132,13 @@
 
   @media (prefers-reduced-motion:reduce){.hero-bg img{transition:none !important}}
 
-  /* ===== Anclas compensadas por el alto REAL del menú ===== */
+  /* Anclas compensadas por el alto REAL del menú */
   header#inicio, section[id]{scroll-margin-top:calc(var(--nav-h) + var(--safe-top) + 20px)}
   @media (max-width:640px){
     header#inicio, section[id]{scroll-margin-top:calc(var(--nav-h) + var(--safe-top) + 32px)}
   }
 
-  /* ===== Centrados duros en móvil solo para “Quiénes Somos” ===== */
+  /* Centrados duros en móvil solo para “Quiénes Somos” */
   @media (max-width:640px){
     #quienes .container{ text-align:center; }
     .about-grid{ grid-template-columns:1fr !important; }
